--- a/Dark Detector Unity/Packages/manifest.json
+++ b/Dark Detector Unity/Packages/manifest.json
@@ -1,44 +1,44 @@
 {
-    "dependencies": {
-        "com.unity.2d.sprite": "1.0.0",
-        "com.unity.burst": "1.4.0-preview.4",
-        "com.unity.editorcoroutines": "1.0.0",
-        "com.unity.ide.visualstudio": "2.0.2",
-        "com.unity.ide.vscode": "1.2.1",
-        "com.unity.inputsystem": "1.0.0",
-        "com.unity.nuget.newtonsoft-json": "2.0.0",
-        "com.unity.properties.ui": "1.5.0-preview",
-        "com.unity.render-pipelines.universal": "10.0.0-preview.26",
-        "com.unity.searcher": "4.3.1",
-        "com.unity.test-framework": "1.1.16",
-        "com.unity.test-framework.performance": "2.3.1-preview",
-        "com.unity.textmeshpro": "3.0.1",
-        "com.unity.ugui": "1.0.0",
-        "nuget.mono-cecil": "0.1.6-preview",
-        "com.unity.modules.ai": "1.0.0",
-        "com.unity.modules.androidjni": "1.0.0",
-        "com.unity.modules.animation": "1.0.0",
-        "com.unity.modules.assetbundle": "1.0.0",
-        "com.unity.modules.audio": "1.0.0",
-        "com.unity.modules.director": "1.0.0",
-        "com.unity.modules.imageconversion": "1.0.0",
-        "com.unity.modules.imgui": "1.0.0",
-        "com.unity.modules.jsonserialize": "1.0.0",
-        "com.unity.modules.particlesystem": "1.0.0",
-        "com.unity.modules.physics": "1.0.0",
-        "com.unity.modules.physics2d": "1.0.0",
-        "com.unity.modules.screencapture": "1.0.0",
-        "com.unity.modules.ui": "1.0.0",
-        "com.unity.modules.uielements": "1.0.0",
-        "com.unity.modules.umbra": "1.0.0",
-        "com.unity.modules.unityanalytics": "1.0.0",
-        "com.unity.modules.unitywebrequest": "1.0.0",
-        "com.unity.modules.unitywebrequestassetbundle": "1.0.0",
-        "com.unity.modules.unitywebrequestaudio": "1.0.0",
-        "com.unity.modules.unitywebrequesttexture": "1.0.0",
-        "com.unity.modules.unitywebrequestwww": "1.0.0",
-        "com.unity.modules.vr": "1.0.0",
-        "com.unity.modules.wind": "1.0.0",
-        "com.unity.modules.xr": "1.0.0"
-    }
+  "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.burst": "1.4.0-preview.4",
+    "com.unity.editorcoroutines": "1.0.0",
+    "com.unity.ide.visualstudio": "2.0.5",
+    "com.unity.ide.vscode": "1.2.3",
+    "com.unity.inputsystem": "1.0.2",
+    "com.unity.nuget.newtonsoft-json": "2.0.0",
+    "com.unity.properties.ui": "1.5.0-preview",
+    "com.unity.render-pipelines.universal": "10.3.1",
+    "com.unity.searcher": "4.3.1",
+    "com.unity.test-framework": "1.1.22",
+    "com.unity.test-framework.performance": "2.3.1-preview",
+    "com.unity.textmeshpro": "3.0.1",
+    "com.unity.ugui": "1.0.0",
+    "nuget.mono-cecil": "0.1.6-preview",
+    "com.unity.modules.ai": "1.0.0",
+    "com.unity.modules.androidjni": "1.0.0",
+    "com.unity.modules.animation": "1.0.0",
+    "com.unity.modules.assetbundle": "1.0.0",
+    "com.unity.modules.audio": "1.0.0",
+    "com.unity.modules.director": "1.0.0",
+    "com.unity.modules.imageconversion": "1.0.0",
+    "com.unity.modules.imgui": "1.0.0",
+    "com.unity.modules.jsonserialize": "1.0.0",
+    "com.unity.modules.particlesystem": "1.0.0",
+    "com.unity.modules.physics": "1.0.0",
+    "com.unity.modules.physics2d": "1.0.0",
+    "com.unity.modules.screencapture": "1.0.0",
+    "com.unity.modules.ui": "1.0.0",
+    "com.unity.modules.uielements": "1.0.0",
+    "com.unity.modules.umbra": "1.0.0",
+    "com.unity.modules.unityanalytics": "1.0.0",
+    "com.unity.modules.unitywebrequest": "1.0.0",
+    "com.unity.modules.unitywebrequestassetbundle": "1.0.0",
+    "com.unity.modules.unitywebrequestaudio": "1.0.0",
+    "com.unity.modules.unitywebrequesttexture": "1.0.0",
+    "com.unity.modules.unitywebrequestwww": "1.0.0",
+    "com.unity.modules.vr": "1.0.0",
+    "com.unity.modules.wind": "1.0.0",
+    "com.unity.modules.xr": "1.0.0"
+  }
 }
