--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-    "name": "com.ifelse.darkdetector",
-    "displayName": "Dark Detector",
-    "version": "1.2.0",
-    "unity": "2019.4",
-    "description": "System dark mode detection in Unity for macOS and iOS, as well as the Unity Editor on macOS",
-    "documentationUrl": "https://github.com/ryanslikesocool/Dark-Detector",
+    "name": "com.developedwithlove.colorscheme",
+    "displayName": "Color Scheme",
+    "version": "2.0.0",
+    "unity": "2020.3",
+    "description": "System color scheme detection in Unity for macOS and iOS, as well as the Unity Editor on macOS",
+    "documentationUrl": "https://github.com/ryanslikesocool/ColorScheme",
     "dependencies": {},
     "author": {
         "name": "Ryan Boyer",
         "email": "ryanjboyer@gmail.com",
         "url": "http://ryanjboyer.com/"
     },
+    "license": "MIT",
     "type": "library"
 }
