Add color scheme detection

--- a/Scripts/NativeColorScheme.asmdef
+++ b/Scripts/NativeColorScheme.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "ColorScheme",
-    "rootNamespace": "ColorScheme",
+    "name": "NativeColorScheme",
+    "rootNamespace": "NativeColorScheme",
     "references": [],
     "includePlatforms": [
         "Editor",
