--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "com.developedwithlove.colorscheme",
-    "displayName": "Color Scheme",
+    "name": "com.developedwithlove.nativecolorscheme",
+    "displayName": "Native Color Scheme",
     "version": "2.0.0",
     "unity": "2020.3",
     "description": "System color scheme detection in Unity for macOS and iOS, as well as the Unity Editor on macOS",
-    "documentationUrl": "https://github.com/ryanslikesocool/ColorScheme",
+    "documentationUrl": "https://github.com/ryanslikesocool/NativeColorScheme",
     "dependencies": {},
     "author": {
         "name": "Ryan Boyer",
