--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "com.developedwithlove.nativecolorscheme",
   "displayName": "Native Color Scheme",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "unity": "2020.3",
-  "description": "System color scheme detection in Unity for macOS and iOS, as well as the Unity Editor on macOS",
+  "description": "System color scheme detection in Unity for macOS and iOS.",
   "documentationUrl": "https://github.com/ryanslikesocool/NativeColorScheme",
   "author": {
     "name": "Ryan Boyer",
